Fix Safari clipping bug

--- a/frontend/src/Components/Nameplate/Nameplate.scss
+++ b/frontend/src/Components/Nameplate/Nameplate.scss
@@ -27,9 +27,8 @@ h1 {
     .headshot-mask {
         position: relative;
         border-radius: 1.5em;
-        box-shadow: inset 0 0 40px rgb(0 0 0 / 30%),
-            inset 0 0 0 1.5px rgb(0 0 0 / 20%);
         overflow: hidden;
+        z-index: 1;
 
         .headshot {
             width: 100%;
